# Transcript-Memory-Engine

./: .cursorrules  .env  .env.example  .gitignore  Dockerfile  Makefile  RAG_Architecture.md  README.md  Transcript Engine Plan Phases.md  docker-compose.yml  pyproject.toml  transcript_memory_engine_prd.md
core/: config.py
scripts/: __init__.py  chunk_transcripts.py  embed_chunks.py  ingest.py  ingest_transcripts.py  load_from_cache.py  process_transcripts.py
static/: style.css
templates/: _chat_message.html  _ingest_progress.html  _navbar.html  _settings_form.html  base.html  chat.html  ingest.html  message_display.html  settings.html
templates/actionables/: _actionables_results_list.html  _exportable_items_list.html  actionables_dashboard.html
tests/: __init__.py  test_config.py
tests/api/: test_actionables_api.py
tests/features/: test_actionables_service.py  test_actionables_utils.py  test_google_services.py
transcript_engine/: __init__.py  main.py
transcript_engine/api/: __init__.py  models.py
transcript_engine/core/: __init__.py  config.py  dependencies.py  logging_config.py
transcript_engine/database/: __init__.py  crud.py  models.py  schema.py
transcript_engine/embeddings/: __init__.py  bge_local.py  stub_embedding.py
transcript_engine/features/: actionables_models.py  actionables_service.py  actionables_utils.py  google_services.py
transcript_engine/ingest/: __init__.py  chunker.py  fetcher.py  ingest.py  ingestion_service.py
transcript_engine/interfaces/: __init__.py  embedding_interface.py  limitless.py  llm_interface.py  vector_store_interface.py
transcript_engine/llms/: __init__.py  ollama_client.py
transcript_engine/processing/: chunking.py
transcript_engine/query/: __init__.py  rag_service.py  retriever.py
transcript_engine/ui/: app.py
transcript_engine/vector_stores/: __init__.py  chroma_store.py
(+8 files in other folders)
